test/types/records/recursive/generic-simple.chpl

record R {
  type T;
  var r : R(int);
}

var r = new R(int);
